--- a/style/style.css
+++ b/style/style.css
@@ -196,3 +196,73 @@ textarea.com-input {height:80px;padding:10px;line-height:1.45;}
 }
 #login .btn.submit>em {font-size:16px;color:#da3835;}
 /*login:1*/
+/*index:0*/
+#bd_index {
+	background-color:#eee;
+	background:#eee url(img/index_bg.jpg) center 0 no-repeat;
+}
+#wrapper {padding:8px;}
+.i-box {overflow:hidden;zoom:1;}
+.f-box {
+	position:relative;
+	float:left;
+	min-width:240px;width:25%;
+	
+	padding:8px;
+	
+}
+.f-box .chart {position:relative;height:240px;background-color:rgba(255,255,255,1);}
+.f-box.big {width:50%;min-width:480px;}
+
+.f-box.spc:before,
+.f-box.spc:after{
+	content:"";
+	position:absolute;left:6px;bottom:6px;
+	width: 24px;height:24px;
+	background: url(../style/img/ico_corner.png) -48px 0 no-repeat;
+}
+.f-box.spc:after {
+	left:auto;right:6px;
+	background-position-x:-72px; 
+}
+.f-box.spc>.chart {
+	background:none;
+	border:2px solid #1897d3;
+}
+.f-box.spc>.chart:before,
+.f-box.spc>.chart:after{
+	content:"";
+	position:absolute;left:-4px;top:-4px;
+	width: 24px;height:24px;
+	background: url(../style/img/ico_corner.png) 0 0 no-repeat;
+}
+.f-box.spc>.chart:after {
+	left:auto;right:-4px;
+	background-position-x:-24px; 
+}
+h1.title {text-align:center;font-size:24px;color:#fff;letter-spacing:4px;padding:18px 0 18px;}
+h1.title + .main {overflow:hidden;zoom:1;}
+h1.title + .main .count {float:left;width:25%;height:180px;padding:8px;}
+
+.total-box {padding:18px!important;text-align:center;color:#fff;}
+.total-box>.main {background-color:#f06;width:135px;height:135px; border-radius:100%; padding-top:48px;}
+.total-box>.main>em,
+.total-box>.main>label {display:block;}
+.total-box>.main>em {font-size:28px;}
+.total-box>.main>label {font-size:16px;margin-top:8px;color:rgba(255,255,255,.8);}
+
+.f-box>h3 {
+	position:absolute;top:20px;left:20px;z-index:1;
+	font-size:14px;font-weight:400;
+	color:rgba(255,255,255,.62);
+}
+
+.chart h3 {padding:10px 10px 4px;color:rgba(255,255,255,.62);font-weight:400;font-size:14px;}
+.chart .com-tb {padding:10px;}
+.chart .com-tb .tb-list {height:160px;}
+.chart .com-tb .tb-list>li {border-bottom:1px solid rgba(255,255,255,.2);}
+.chart .com-tb .tb-list>li:last-child {border:none;}
+.chart .com-tb .tb-hd {background-color:rgba(24,151,211,.62);border:none;border-radius:2px;}
+.chart .com-tb .tb-td {padding:8px 0 8px 8px;color:rgba(255,255,255,.62);}
+.chart .com-tb .tb-hd .tb-td {color:rgba(255,255,255,.38);}
+/*index:1*/
