--- a/style/style.css
+++ b/style/style.css
@@ -17,8 +17,8 @@ time, mark, audio, video {
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
-	box-sizing:border-box;
 	-webkit-box-sizing:border-box;
+	box-sizing:border-box;
 }
 body {
 	line-height:1;
@@ -437,7 +437,7 @@ h1.title + .main .count {float:left;width:25%;height:180px;padding:8px;}
 /*chart-view:1*/
 /*search-box:0*/
 .search-box {
-	position:absolute;top:24px;right:80px;
+	position:absolute;top:24px;right:72px;
 	z-index:10;
 	width:240px;
 	padding:0 15px 15px;
@@ -540,7 +540,7 @@ h1.title + .main .count {float:left;width:25%;height:180px;padding:8px;}
 .fendui .total-box .main {width:245px;height:245px;margin-top:40px;}
 /*fendui:1*/
 /*total_table:0*/
-#tb_total {width:90%;}
+#tb_total {width:96%;}
 #tb_total .com-table thead {background-color:#f9f9f9;}
 #tb_total .com-table th,#tb_total .com-table td {text-align:center;}
 #tb_total .com-table tr:first-child>th:first-child,
@@ -623,3 +623,84 @@ h1.title + .main .count {float:left;width:25%;height:180px;padding:8px;}
 .select-box>select>option {background-color:#0059b2;}
 .chart_list .com-tb .tb-td.hasSelect {padding:0;}
 /*Select-Box:1*/
+/*update:181102:0*/
+.cover_header .btn-admin {
+	top:24px;right:24px;
+	background:none;
+	background-color:#fff;
+	background-color:rgba(255,255,255,.8);
+	color:#007fed;
+	box-shadow:0 1px 0 rgba(0,0,0,.04);
+}
+.cover_header .btn-admin:hover {background-color:rgba(255,255,255,1);}
+
+.gugan .f-box>.chart .com-tb {width:100%;border:none;border-top:2px solid rgba(255,255,255,.2);}
+.ziliao .f-box.wide .chart {padding:20px 10px;}
+.ziliao .f-box>.chart .com-tb {min-height:inherit;padding:20px;}
+.chart-title>h1,
+.chart-title .btn-down {
+	display:inline-block; 
+	vertical-align: middle;
+}
+.chart-title .btn-down {
+	display:inline-block;
+	padding:4px;
+	border:1px solid #fff;
+	border-radius:4px;
+	margin-left:12px;
+}
+.chart-title .btn-down>em {color:#fff;font-size:14px;}
+
+.btn-print {
+	display:block;
+	width:120px;padding:12px 16px;
+	margin:40px auto;
+	border:1px solid #fff;
+	text-align:center;
+	border-radius:20px;
+	background-color: #fff;
+}
+.btn-print>em {font-size:14px;color:#0059b2;font-weight:700;}
+
+.img-box {
+	overflow:hidden;
+	display:-webkit-flex;
+	display:flex;
+	margin-top:12px;
+}
+.img-box>li {-webkit-flex:1;flex:1;padding-left:16px;}
+.img-box>li:first-child {padding-left:0;}
+.img-box>li>a {display:block;position:relative;}
+.img-box>li>a>h4 {
+	position:absolute;bottom:4px;left:4px;right:4px;
+	height:28px;line-height:28px;
+	background-color:rgba(0,0,0,.62);
+	color:#fff;
+	text-align: center;
+	font-weight:400;
+}
+.img-box>li img {display:block;width:100%;background-color:#fff;padding:4px;}
+
+.com-tb .tb-list + .title {
+	margin-top:12px;
+	padding:16px 0 4px;
+	border:none;
+	border-top:1px solid rgba(255,255,2555,.2);
+}
+.com-tb .tb-list + .title .btn-more {top:16px;}
+
+@media print {
+	.no-print {display:none;}
+	#bd_person, 
+	#bd_total {background-color:#fff;}
+	#tb_person>h1, 
+	#tb_total>h1,
+	#tb_person>.base, 
+	#tb_total>.base {color:#000;}
+	#tb_person>table th, 
+	#tb_person>table td, 
+	.com-table th, 
+	.com-table td {border-color:#000;color:#000;}
+}
+@page{margin:5mm;}
+/*update:181102:1*/
